# clod-compu-stats

./: .gitignore  CLAUDE.md  README.md  dashboard.py  dashboard.tcss  pyproject.toml  requirements.txt  run.sh  setup.sh
src/clod_compu_stats/: __init__.py  __main__.py  dashboard.py
src/compu_clod_stats/: __init__.py  __main__.py  dashboard.py  dashboard.tcss
