[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compu-clod-stats"
version = "2.0.0"
description = "Terminal dashboard for system metrics, Docker, network, git repos, health checks, and Claude usage stats"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "textual>=0.89.0",
    "psutil>=5.9.0",
    "docker>=7.0.0",
    "requests>=2.31.0",
]

[project.scripts]
ccs = "compu_clod_stats.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
compu_clod_stats = ["*.tcss"]
